--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+env:
+  DATREE_TOKEN: ${{ secrets.DATREE_TOKEN }} 
 
 jobs:
   build:
@@ -28,3 +30,5 @@ jobs:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Run Datree's policy check
+      run: datree test ~/.datree/k8s-demo.yaml
