--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,4 @@ jobs:
     - name: Install Datree
       run: curl https://get.datree.io | /bin/bash
     - name: Run Datree's policy check
-      run: datree test kube.yaml
+      run: datree test kube.yml
