--- a/kube.yml
+++ b/kube.yml
@@ -46,7 +46,7 @@ spec:
         - name: registry-secret
       containers:
         - name: myapp
-          image: tochandru/webapp:latest
+          image: tochandru/webapp:master-b0ccd38
           command: ["/bin/sh"]
           args: ["-c","sh /usr/local/tomcat/bin/startup.sh;while true; do echo hello; sleep 10;done"]
           imagePullPolicy: IfNotPresent
